kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nst-ingress
  annotations:
    # Remove or comment out the rewrite-target annotation
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: 192.168.49.2.nip.io
      http:
        paths:
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /stylize
            pathType: Prefix
            backend:
              service:
                name: routing-service
                port:
                  number: 8000
          - path: /feedback
            pathType: Prefix
            backend:
              service:
                name: routing-service
                port:
                  number: 8000
